--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "sass-loader": "^6.0.7",
     "video-react": "^0.13.0",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-middleware": "^3.0.1",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2",
     "whatwg-fetch": "^2.0.3",
@@ -56,6 +55,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^0.28.11",
     "style-loader": "^0.20.3",
-    "webpack": "^4.2.0"
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.2"
   }
 }
